# edu.opengl.profile.core

./: LICENSE  README.md
src/: .app.cpp.swp  CMakeLists.txt  app.cpp  shader.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/shaders/: fragment.glsl  vertex.glsl
